--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "Webpack",
     "es6"
   ],
-  "main": "./lib/index.js",
+  "main": "./lib",
   "scripts": {
     "build": "npm run build:lib",
     "build:lib": "babel src --out-dir lib"
