--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
-    "prop-types": "^15.5.10"
+    "prop-types": "^15.5.10",
+    "redux-object": "^0.5.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
