--- a/.eslintrc
+++ b/.eslintrc
@@ -13,12 +13,15 @@
     "import/namespace": 0,
     "import/no-unresolved": 0,
     "import/no-named-as-default": 2,
+    "import/prefer-default-export": 0,
     "comma-dangle": 0,
     "indent": [2, 2, {"SwitchCase": 1}],
     "no-console": 0,
     "no-alert": 0,
     "id-length": [2, {"min": 1}],
-    "no-var": 0
+    "no-var": 0,
+    "no-plusplus": 0,
+    "no-restricted-globals": 0
   },
   "plugins": [
     "import"
