--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
     "build:lib": "babel src --out-dir lib"
   },
   "dependencies": {
+    "javascript-utils": "^1.2.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "prop-types": "^15.5.10",
-    "redux-object": "^0.5.0"
+    "redux-object": "^0.5.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.1",
+    "babel-eslint": "^8.0.2",
     "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.22.0",
