--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "lodash": "^4.17.4",
     "moment": "^2.19.3",
+    "parse-full-name": "^1.2.3",
     "prop-types": "^15.5.10",
     "react-router": "^4.2.0",
     "react-router-config": "^1.0.0-beta.4",
