--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   ],
   "main": "./lib",
   "scripts": {
-    "build": "npm run build:lib",
-    "build:lib": "babel src --out-dir lib"
+    "clean": "rm -rf lib",
+    "prebuild": "yarn run clean",
+    "build": "yarn run build:lib",
+    "build:lib": "babel src --out-dir lib",
+    "test": "mocha --require babel-polyfill --require babel-register tests/*.js --reporter spec||exit 0"
   },
   "dependencies": {
     "lodash": "^4.17.5",
@@ -34,6 +37,7 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "chai": "^4.1.1",
