--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Collection of Javascript utils for your application.",
   "author": "Vince Chavez <vchavez92780@gmail.com> (http://github.com/pcs2112)",
   "license": "MIT",
-  "version": "0.0.45",
+  "version": "0.0.46",
   "repository": {
     "type": "git",
     "url": "https://github.com/pcs2112/javascript-utils"
@@ -30,7 +30,8 @@
     "react": "^16.2.0",
     "react-router": "^4.2.0",
     "react-router-config": "^1.0.0-beta.4",
-    "redux-object": "^0.5.5"
+    "redux-object": "^0.5.5",
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
