--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Collection of Javascript utils for your application.",
   "author": "Vince Chavez <vchavez92780@gmail.com> (http://github.com/pcs2112)",
   "license": "MIT",
-  "version": "0.0.46",
+  "version": "0.0.47",
   "repository": {
     "type": "git",
     "url": "https://github.com/pcs2112/javascript-utils"
@@ -25,27 +25,31 @@
   },
   "dependencies": {
     "lodash": "^4.17.11",
-    "moment": "^2.21.0",
+    "moment": "2.23.0",
     "parse-full-name": "^1.2.3",
-    "react": "^16.5.2",
+    "react": "16.7.0",
     "react-router": "^4.2.0",
-    "react-router-config": "^1.0.0-beta.4",
-    "redux-object": "^0.5.5",
+    "react-router-config": "4.4.0-beta.6",
+    "redux-object": "0.5.7",
     "reselect": "^4.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/plugin-proposal-function-bind": "^7.2.0",
+    "@babel/plugin-syntax-export-default-from": "^7.2.0",
+    "@babel/plugin-transform-react-display-name": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-add-module-exports": "^1.0.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-stage-0": "^6.22.0",
     "chai": "^4.1.1",
-    "eslint": "^5.6.1",
+    "eslint": "5.11.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-react": "^7.6.1",
     "mocha": "^5.0.1"
   }
