--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Collection of Javascript utils for your application.",
   "author": "Vince Chavez <vchavez92780@gmail.com> (http://github.com/pcs2112)",
   "license": "MIT",
-  "version": "0.0.48",
+  "version": "0.0.49",
   "repository": {
     "type": "git",
     "url": "https://github.com/pcs2112/javascript-utils"
@@ -28,8 +28,8 @@
     "moment": "2.23.0",
     "parse-full-name": "^1.2.3",
     "react": "16.7.0",
-    "react-router": "4.4.0-beta.1",
-    "react-router-config": "4.4.0-beta.6",
+    "react-router": "^4.3.1",
+    "react-router-config": "1.0.0-beta.4",
     "redux-object": "0.5.7",
     "reselect": "^4.0.0"
   },
@@ -42,15 +42,14 @@
     "@babel/plugin-syntax-export-default-from": "^7.2.0",
     "@babel/plugin-transform-react-display-name": "^7.2.0",
     "@babel/preset-env": "^7.2.3",
-    "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-add-module-exports": "^1.0.0",
     "chai": "^4.1.1",
-    "eslint": "5.11.0",
+    "eslint": "5.11.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-react": "^7.6.1",
+    "eslint-plugin-react": "7.11.1",
     "mocha": "^5.0.1"
   }
 }
