--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,6 @@
 {
   "presets": [
-    "@babel/env",
-    "@babel/react"
+    "@babel/env"
   ],
   "plugins": [
     "@babel/plugin-proposal-function-bind",
