--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react": "16.7.0",
     "react-router": "^4.3.1",
     "react-router-config": "1.0.0-beta.4",
+    "react-virtualized": "^9.21.0",
+    "react-virtualized-tree": "^2.3.10",
     "redux-object": "0.5.7",
     "reselect": "^4.0.0"
   },
