--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Collection of Javascript utils for your application.",
   "author": "Vince Chavez <vchavez92780@gmail.com> (http://github.com/pcs2112)",
   "license": "MIT",
-  "version": "0.0.52",
+  "version": "0.0.53",
   "repository": {
     "type": "git",
     "url": "https://github.com/pcs2112/javascript-utils"
@@ -24,34 +24,35 @@
     "test": "mocha --require babel-polyfill --require babel-register tests/**/*$MATCH*.js --reporter spec||exit 0"
   },
   "dependencies": {
-    "lodash": "^4.17.11",
-    "moment": "2.23.0",
-    "parse-full-name": "^1.2.3",
-    "react": "16.7.0",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
+    "parse-full-name": "^1.2.4",
+    "react": "^16.10.2",
     "react-router": "^4.3.1",
     "react-router-config": "1.0.0-beta.4",
-    "react-virtualized": "^9.21.0",
-    "react-virtualized-tree": "^2.3.10",
-    "redux-object": "0.5.7",
+    "react-virtualized": "^9.21.1",
+    "react-virtualized-tree": "^3.2.3",
+    "redux-object": "^0.5.10",
     "reselect": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.2.3",
-    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/cli": "7.6.4",
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-export-default-from": "^7.5.2",
     "@babel/plugin-proposal-function-bind": "^7.2.0",
     "@babel/plugin-syntax-export-default-from": "^7.2.0",
     "@babel/plugin-transform-react-display-name": "^7.2.0",
-    "@babel/preset-env": "^7.2.3",
-    "babel-eslint": "^10.0.1",
-    "babel-plugin-add-module-exports": "^1.0.0",
+    "@babel/preset-env": "^7.6.3",
+    "babel-eslint": "^10.0.3",
+    "babel-plugin-add-module-exports": "^1.0.2",
     "chai": "^4.1.1",
-    "eslint": "5.11.1",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-react": "7.11.1",
-    "mocha": "^5.0.1"
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "mocha": "^6.2.2"
   }
 }
